# ReadPDF

./: CMakeLists.txt  README.md  ReadPDF.cpp  cleanHindi.sed  extractFonts.sh  getText.sh  pdfCleanse.cpp
GlyphsMaster/: rename
sampleInputs/: README.md
sampleOutputs/: 76-15-01.txt  76-15-01_.text  76-15-376.text  76-15-376.txt  76-15-376_.text  apply  document(1).TXT  document(1).text  document(1).txt  document(10).text  document(10).txt  document(11).text  document(11).txt  document(12).text  document(12).txt  document(13).text  document(13).txt  document(14).text  document(14).txt  document(15).text  document(15).txt  document(16).text  document(16).txt  document(17).text  document(17).txt  document(18).text  document(18).txt  document(19).text  document(19).txt  document(2).TXT  document(2).text  document(2).txt  document(20).text  document(20).txt  document(21).text  document(21).txt  document(22).text  document(22).txt  document(23).text  document(23).txt  (+53 more)
